# macos-launchd

./: .gitignore  Cargo.toml  README.md
examples/: launchd_parser.rs
src/: error.rs  launchd.rs  lib.rs  size.rs
tests/: launchd_test.rs
