[package]
name = "macos-launchd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = "1.3.1"
serde = {version="1.0.136", features = ["derive"]}
log = "0.4.14"
serde_json = "1.0.79"

[dev-dependencies]
simplelog = "0.11.2"